# ESE5190_Lab

./: LICENSE  README.md
lab2B/part_1/: readme.md
lab2B/part_8/apds_procotol/: APDS9960.c  CMakeCache.txt  CMakeLists.txt  Makefile  apds_ctrl.dis  apds_ctrl.elf  apds_ctrl.elf.map  apds_ctrl.hex  apds_ctrl.uf2  cmake_install.cmake  i2c.pio  main.c
lab2B/part_8/apds_procotol/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
lab2B/part_8/apds_procotol/elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
lab2B/part_8/apds_procotol/pico-sdk/: Makefile  cmake_install.cmake
lab2B/part_8/apds_procotol/pico-sdk/docs/: Makefile
lab2B/part_8/apds_procotol/pico-sdk/src/: Makefile  cmake_install.cmake
lab2B/part_8/apds_procotol/pico-sdk/tools/: Makefile  cmake_install.cmake
lab2B/part_8/apds_procotol/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake
lab2B/part_9/lab_on_a_chip/: APDS9960.c  CMakeCache.txt  CMakeLists.txt  Makefile  apds_C.dis  apds_C.elf  apds_C.elf.map  apds_C.hex  apds_C.uf2  cmake_install.cmake  i2c.pio.h  main.c  ws2812.c
lab2B/part_9/lab_on_a_chip/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
lab2B/part_9/lab_on_a_chip/elf2uf2/boot_uf2_headers/: Makefile
lab2B/part_9/lab_on_a_chip/pico-sdk/: Makefile  cmake_install.cmake
lab2B/part_9/lab_on_a_chip/pico-sdk/docs/: Makefile
lab2B/part_9/lab_on_a_chip/pico-sdk/src/: Makefile  cmake_install.cmake
lab2B/part_9/lab_on_a_chip/pico-sdk/tools/: Makefile
lab2B/part_9/lab_on_a_chip/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake
(+503 files in other folders)
